@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.945 2002/12/30 00:12:17 kristerw Exp $
+$NetBSD: CHANGES,v 1.946 2002/12/30 18:05:11 sommerfeld Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -4312,3 +4312,7 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated sylpheed to 0.8.8 [chris 2002-12-29]
 	Updated sylpheed-claws to 0.8.8 [chris 2002-12-29]
 	Updated manedit to 0.5.6 [kristerw 2002-12-30]
+	Added libares-1.1.1 [sommerfeld 2002-12-30]
+	Added zephyr-20010518 [sommerfeld 2002-12-30]
+	Added tzc-2.6.15 [sommerfeld 2002-12-30]
+	Added zephyr-mode-2.5.20 [sommerfeld 2002-12-30]
